syntax = "proto3";

option java_package="com.grpc.server.proto";

message Grpc_Message {
    map<string,string> header = 1;
    string key = 2;
    string value = 3;

}

message ProducerRequest {
    string topic_name = 1;
    int32 partition = 2;
    string key = 3;
    string value = 4;
    string schemaName = 5;
    string avroSchemaFormat = 6;
    map<string,string> header = 7;
}


message GetAllMessages {}



message Response {
    Grpc_Message message = 1;
}


message OkResponse {
  bool isOk = 1;
}

service KafkaService {
  rpc GetAll (GetAllMessages) returns (stream Response);
  rpc Save (ProducerRequest) returns (OkResponse);
}